Update endpoint for face identification

--- a/src/FaceApiSample.FunctionApp/photo-capture.html
+++ b/src/FaceApiSample.FunctionApp/photo-capture.html
@@ -99,7 +99,7 @@
         $("#screenshot img").on("load", function() {
           $.ajax({
             type: "POST",
-            url: "/api/faces/register",
+            url: "/api/faces/identify",
             data: $(this).attr("src")
           });
         });
