Update face identifier by changing API request/response

--- a/src/FaceApiSample.FunctionApp/photo-capture.html
+++ b/src/FaceApiSample.FunctionApp/photo-capture.html
@@ -97,10 +97,19 @@
     (function ($) {
       $(document).ready(function() {
         $("#screenshot img").on("load", function() {
+          let payload = {
+            "personGroup": "justinyoo",
+            "image": $(this).attr("src")
+          };
+
           $.ajax({
             type: "POST",
+            headers: {
+              "x-functions-key": "ZkGrB61CzgeGcCT6OaFxeKLrwKkdaFpKcIvHYxR3lWFvRd5uKTnrog=="
+            },
             url: "/api/faces/identify",
-            data: $(this).attr("src")
+            dataType: "json",
+            data: JSON.stringify(payload)
           });
         });
       });
